--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,8 @@ body {
 /* SVG 进度环 */
 .progress-ring {
     transform: rotate(-90deg);
+    width: 100%;
+    height: 100%;
 }
 
 .progress-ring-bg {
@@ -549,18 +551,6 @@ body {
     .timer-container {
         width: 240px;
         height: 240px;
-    }
-    
-    .progress-ring {
-        width: 240px;
-        height: 240px;
-    }
-    
-    .progress-ring-bg,
-    .progress-ring-circle {
-        cx: 120;
-        cy: 120;
-        r: 100;
     }
     
     .time-text {
